--- a/src/pages/atasan/ServiceList/ServiceList.css
+++ b/src/pages/atasan/ServiceList/ServiceList.css
@@ -113,6 +113,26 @@
   color: #6b6b6b;
 }
 
+.atasan-status.status-waiting {
+  color: #f39c12;
+  font-weight: 600;
+}
+
+.atasan-status.status-process {
+  color: #2980b9;
+  font-weight: 600;
+}
+
+.atasan-status.status-completed {
+  color: #27ae60;
+  font-weight: 600;
+}
+
+.atasan-status.status-rejected {
+  color: #c0392b;
+  font-weight: 600;
+}
+
 .atasan-actions {
   display: flex;
   align-items: center;
