--- a/src/pages/user/ServiceList/ServiceList.css
+++ b/src/pages/user/ServiceList/ServiceList.css
@@ -123,6 +123,26 @@
   color: #6b6b6b;
 }
 
+.status-waiting {
+  color: #f39c12;
+  font-weight: 600;
+}
+
+.status-process {
+  color: #2980b9;
+  font-weight: 600;
+}
+
+.status-completed {
+  color: #27ae60;
+  font-weight: 600;
+}
+
+.status-rejected {
+  color: #c0392b;
+  font-weight: 600;
+}
+
 .service-actions {
   display: flex;
   align-items: center;
